# WaveForge

./: CONTRIBUTING.md  LICENSE  NOTES.md  README.md  SECURITY.md
.github/workflows/: build.yml  release.yml
docs/: CNAME  about.html  flasher.js  index.html  setup.html  style.css
docs/cps/: cps.css  cps.js  index.html  radio-dump.js  radio-read.js  radio-write.js  test.html
firmware/: CMakeLists.txt  CMakePresets.json
firmware/application/include/: version.h
firmware/application/source/user_interface/: menuFirmwareInfoScreen.c  uiSplashScreen.c
firmware/cmake/: arm-none-eabi.cmake
linux/etc/udev/rules.d/Ubuntu_and_Fedora/: 99-gd77.rules
linux/etc/udev/rules.d/archlinux/: 99-gd77.rules
tools/: gd-77_firmware_loader.py  gd-77_screen_grabber.py
