cmake_minimum_required(VERSION 3.22)

# Toolchain must be declared before project() so CMake uses the cross-compiler
# for all compiler detection steps.
set(CMAKE_TOOLCHAIN_FILE ${CMAKE_CURRENT_SOURCE_DIR}/cmake/arm-none-eabi.cmake
    CACHE FILEPATH "Cross-compilation toolchain file")

project(WaveForge C ASM)

# ─── Build instructions ────────────────────────────────────────────────────────
# Configure:  cmake -S firmware -B firmware/build -DCMAKE_BUILD_TYPE=Debug
# Build:      cmake --build firmware/build -j
# ──────────────────────────────────────────────────────────────────────────────

# ─── Complication 1: Git version ──────────────────────────────────────────────
# hotspot.c, usb_com.c, and menuFirmwareInfoScreen.c embed the short commit hash
# as a version string.  Eclipse evaluated this via a shell backtick in a per-file
# "Other flags" override; we capture it once at configure time instead.
execute_process(
    COMMAND git rev-parse --short HEAD
    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
    OUTPUT_VARIABLE   GIT_HASH
    OUTPUT_STRIP_TRAILING_WHITESPACE
    ERROR_QUIET
    RESULT_VARIABLE   GIT_RESULT
)
if(NOT GIT_RESULT EQUAL 0 OR NOT GIT_HASH)
    set(GIT_HASH "UNKNOWN")
endif()

# ─── Architecture flags (Cortex-M4F, hardware FPU) ────────────────────────────
# These must be passed to both the compiler and the linker.
set(MCU_FLAGS
    -mcpu=cortex-m4
    -mthumb
    -mfpu=fpv4-sp-d16
    -mfloat-abi=hard
)

# ─── Platform / variant / language selection ──────────────────────────────────
set(PLATFORM "MDUV380" CACHE STRING "Radio platform (MDUV380 | DM1701 | RT84)")
set_property(CACHE PLATFORM PROPERTY STRINGS MDUV380 DM1701 RT84)

option(UV380_10W_PLUS "Enable UV380 10W+ variant (MDUV380 only)" OFF)
option(JAPANESE       "Build Japanese language variant"           OFF)

if(PLATFORM STREQUAL "MDUV380")
    set(PLATFORM_DEFINES PLATFORM_MDUV380)
    if(UV380_10W_PLUS)
        list(APPEND PLATFORM_DEFINES PLATFORM_VARIANT_UV380_PLUS_10W)
    endif()
    set(OUTPUT_BASE "WaveForge_MDUV380")
    if(UV380_10W_PLUS)
        string(APPEND OUTPUT_BASE "_10W_PLUS")
    endif()
elseif(PLATFORM STREQUAL "DM1701")
    set(PLATFORM_DEFINES PLATFORM_RT84_DM1701)
    # The original .cproject omits PLATFORM_VARIANT_DM1701 from JA_DM1701_FW
    # but includes it in DM1701_FW — replicated faithfully.
    if(NOT JAPANESE)
        list(APPEND PLATFORM_DEFINES PLATFORM_VARIANT_DM1701)
    endif()
    set(OUTPUT_BASE "WaveForge_DM1701")
elseif(PLATFORM STREQUAL "RT84")
    set(PLATFORM_DEFINES PLATFORM_RT84_DM1701)
    set(OUTPUT_BASE "WaveForge_RT84")
else()
    message(FATAL_ERROR
        "Unknown PLATFORM '${PLATFORM}'. Valid: MDUV380 | DM1701 | RT84")
endif()

if(JAPANESE)
    list(APPEND PLATFORM_DEFINES LANGUAGE_BUILD_JAPANESE)
    string(APPEND OUTPUT_BASE "_Japanese")
endif()

message(STATUS "WaveForge: platform=${PLATFORM}  10W=${UV380_10W_PLUS}"
    "  japanese=${JAPANESE}  → ${OUTPUT_BASE}.bin")

# ─── Complication 2: codec binary blob ────────────────────────────────────────
# codec_bin_section_1.bin is a placeholder binary generated by codec_cleaner -C
# and embedded at absolute flash address 0x807537C via a custom linker section.
# We automate the generation so a fresh clone builds without any manual steps.
#
# The original codec_bin.S uses a path relative to the Eclipse build directory,
# which breaks for any other build location.  We replace it with a generated .S
# that uses an absolute path, making the build fully directory-agnostic.
set(CODEC_CLEANER  "${CMAKE_CURRENT_SOURCE_DIR}/tools/codec_cleaner.Linux")
set(CODEC_BIN_BLOB "${CMAKE_CURRENT_BINARY_DIR}/codec_bin_section_1.bin")
set(CODEC_BIN_ASM  "${CMAKE_CURRENT_BINARY_DIR}/codec_bin_generated.S")

# Git does not preserve execute permission on all platforms; fix it at
# configure time so the custom command below can actually run the binary.
file(CHMOD "${CODEC_CLEANER}"
    PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
                GROUP_READ GROUP_EXECUTE
                WORLD_READ WORLD_EXECUTE)

# Generate the placeholder binary.  The OUTPUT-based custom command only fires
# when the file is absent, so this is a no-op on every subsequent build.
add_custom_command(
    OUTPUT  "${CODEC_BIN_BLOB}"
    COMMAND "${CODEC_CLEANER}" -C
    WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}"
    COMMENT "Generating codec_bin_section_1.bin via codec_cleaner -C"
    VERBATIM
)
add_custom_target(codec_blob_gen DEPENDS "${CODEC_BIN_BLOB}")

# Write the assembly wrapper at configure time — the blob path is already known.
# add_dependencies(WaveForge.elf codec_blob_gen) below guarantees the blob
# exists before the assembler processes this file.
file(WRITE "${CODEC_BIN_ASM}"
    ".section .codec_bin_section_1\n"
    ".incbin \"${CODEC_BIN_BLOB}\"\n"
)

# ─── Source files ─────────────────────────────────────────────────────────────

set(CORE_SOURCES
    Core/Startup/startup_stm32f405vgtx.s
    Core/Src/freertos.c
    Core/Src/main.c
    Core/Src/stm32f4xx_hal_msp.c
    Core/Src/stm32f4xx_hal_timebase_tim.c
    Core/Src/stm32f4xx_it.c
    Core/Src/syscalls.c
    Core/Src/sysmem.c
    Core/Src/system_stm32f4xx.c
)

set(HAL_SOURCES
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_adc.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_adc_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_cortex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dac.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dac_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dma.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dma_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_exti.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_flash.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_flash_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_flash_ramfunc.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_gpio.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_i2c.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_i2c_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_i2s.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_i2s_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pcd.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pcd_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pwr.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pwr_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rcc.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rcc_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rtc.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rtc_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_spi.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_tim.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_tim_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_uart.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_ll_adc.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_ll_usb.c
)

# Complication 3: FreeRTOS — must use the GCC/ARM_CM4F port for correct
# hardware-FPU task context switching on Cortex-M4F.
set(FREERTOS_SOURCES
    Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2/cmsis_os2.c
    Middlewares/Third_Party/FreeRTOS/Source/croutine.c
    Middlewares/Third_Party/FreeRTOS/Source/event_groups.c
    Middlewares/Third_Party/FreeRTOS/Source/list.c
    Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F/port.c
    Middlewares/Third_Party/FreeRTOS/Source/portable/MemMang/heap_4.c
    Middlewares/Third_Party/FreeRTOS/Source/queue.c
    Middlewares/Third_Party/FreeRTOS/Source/stream_buffer.c
    Middlewares/Third_Party/FreeRTOS/Source/tasks.c
    Middlewares/Third_Party/FreeRTOS/Source/timers.c
)

set(USB_SOURCES
    Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/usbd_cdc.c
    Middlewares/ST/STM32_USB_Device_Library/Core/Src/usbd_core.c
    Middlewares/ST/STM32_USB_Device_Library/Core/Src/usbd_ctlreq.c
    Middlewares/ST/STM32_USB_Device_Library/Core/Src/usbd_ioreq.c
    USB_DEVICE/App/usb_device.c
    USB_DEVICE/App/usbd_cdc_if.c
    USB_DEVICE/App/usbd_desc.c
    USB_DEVICE/Target/usbd_conf.c
)

# Complication 4: Segger RTT syscalls — only compile the GCC variant.
# The IAR/KEIL/SES variants define IDE-specific I/O hooks that are dead
# code under GCC, but excluding them keeps the build clean and explicit.
# Core/Src/syscalls.c defines _write as __attribute__((weak)); the RTT
# version below overrides it without a linker conflict.
set(SEGGER_SOURCES
    SeggerRTT/RTT/SEGGER_RTT.c
    SeggerRTT/RTT/SEGGER_RTT_printf.c
    SeggerRTT/RTT/SEGGER_RTT_ASM_ARMv7M.S
    SeggerRTT/Syscalls/SEGGER_RTT_Syscalls_GCC.c
)

set(APP_SOURCES
    application/source/applicationMain.c
    application/source/dmr_codec/codec.c
    application/source/dmr_codec/codec_interface.c
    application/source/functions/aprs.c
    application/source/functions/calibration.c
    application/source/functions/codeplug.c
    application/source/functions/hotspot.c
    application/source/functions/rxPowerSaving.c
    application/source/functions/satellite.c
    application/source/functions/settings.c
    application/source/functions/sound.c
    application/source/functions/ticks.c
    application/source/functions/trx.c
    application/source/functions/voicePrompts.c
    application/source/functions/vox.c
    application/source/hardware/AT1846S.c
    application/source/hardware/EEPROM.c
    application/source/hardware/HR-C6000.c
    application/source/hardware/HX8353E_display.c
    application/source/hardware/SPI_Flash.c
    application/source/hardware/radioHardwareInterface.c
    application/source/interfaces/adc.c
    application/source/interfaces/batteryAndPowerManagement.c
    application/source/interfaces/batteryRAM.c
    application/source/interfaces/clockManager.c
    application/source/interfaces/dac.c
    application/source/interfaces/gpio.c
    application/source/interfaces/gps.c
    application/source/interfaces/i2c.c
    application/source/interfaces/i2s.c
    application/source/interfaces/interrupts.c
    application/source/interfaces/pit.c
    application/source/interfaces/settingsStorage.c
    application/source/interfaces/spi.c
    application/source/interfaces/stm32f4xx_ll_pwr.c
    application/source/interfaces/wdog.c
    application/source/io/Leds.c
    application/source/io/buttons.c
    application/source/io/display.c
    application/source/io/keyboard.c
    application/source/usb/usb_com.c
    application/source/user_interface/menuAPRSOptions.c
    application/source/user_interface/menuCalibration.c
    application/source/user_interface/menuChannelDetails.c
    application/source/user_interface/menuContactDetails.c
    application/source/user_interface/menuContactList.c
    application/source/user_interface/menuDisplayMenuList.c
    application/source/user_interface/menuDisplayOptions.c
    application/source/user_interface/menuFirmwareInfoScreen.c
    application/source/user_interface/menuGPS.c
    application/source/user_interface/menuGeneralOptions.c
    application/source/user_interface/menuLanguage.c
    application/source/user_interface/menuLastHeard.c
    application/source/user_interface/menuRSSIScreen.c
    application/source/user_interface/menuRadioInfos.c
    application/source/user_interface/menuRadioOptions.c
    application/source/user_interface/menuSatelliteScreen.c
    application/source/user_interface/menuSoundOptions.c
    application/source/user_interface/menuSystem.c
    application/source/user_interface/menuThemeOptions.c
    application/source/user_interface/menuZoneList.c
    application/source/user_interface/uiCPS.c
    application/source/user_interface/uiChannelMode.c
    application/source/user_interface/uiGlobals.c
    application/source/user_interface/uiHotspot.c
    application/source/user_interface/uiLocalisation.c
    application/source/user_interface/uiLockScreen.c
    application/source/user_interface/uiMessageBox.c
    application/source/user_interface/uiNotification.c
    application/source/user_interface/uiPowerOff.c
    application/source/user_interface/uiPrivateCall.c
    application/source/user_interface/uiSplashScreen.c
    application/source/user_interface/uiTxScreen.c
    application/source/user_interface/uiTxTgPcContactOwnId.c
    application/source/user_interface/uiUtilities.c
    application/source/user_interface/uiVFOMode.c
)

# ─── Executable ───────────────────────────────────────────────────────────────
add_executable(WaveForge.elf
    ${CORE_SOURCES}
    ${HAL_SOURCES}
    ${FREERTOS_SOURCES}
    ${USB_SOURCES}
    ${SEGGER_SOURCES}
    ${APP_SOURCES}
    ${CODEC_BIN_ASM}   # generated replacement for codec_bin.S (absolute .incbin path)
)

# Guarantee codec_cleaner has run before any source in the target is assembled.
# add_dependencies at target level means the entire codec_blob_gen target
# completes before WaveForge.elf starts building any of its sources.
add_dependencies(WaveForge.elf codec_blob_gen)

# ─── Compiler definitions ─────────────────────────────────────────────────────
target_compile_definitions(WaveForge.elf PRIVATE
    USE_HAL_DRIVER
    STM32F405xx
    ${PLATFORM_DEFINES}
    DEBUG
    NDEBUG
)

# ─── Include paths ────────────────────────────────────────────────────────────
# Vendor headers are marked SYSTEM to suppress warnings from third-party code.
target_include_directories(WaveForge.elf SYSTEM PRIVATE
    Drivers/CMSIS/Include
    Drivers/CMSIS/Device/ST/STM32F4xx/Include
    Drivers/STM32F4xx_HAL_Driver/Inc
    Drivers/STM32F4xx_HAL_Driver/Inc/Legacy
    Middlewares/Third_Party/FreeRTOS/Source/include
    Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F
    Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2
    Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc
    Middlewares/ST/STM32_USB_Device_Library/Core/Inc
)
target_include_directories(WaveForge.elf PRIVATE
    # Core/Inc first: stm32f4xx_hal_conf.h and FreeRTOSConfig.h live here and
    # must be found before any HAL or FreeRTOS headers that include them.
    Core/Inc
    USB_DEVICE/App
    USB_DEVICE/Target
    application/include
    # Firmware root: allows includes like "SeggerRTT/RTT/SEGGER_RTT.h"
    .
)

# ─── Compile options ──────────────────────────────────────────────────────────
target_compile_options(WaveForge.elf PRIVATE
    ${MCU_FLAGS}
    -Os
    -g3
    -ffunction-sections
    -fdata-sections
    -Wall
    -Wno-format
    -Wno-format-truncation
    -Wno-stringop-overflow
)

# ─── Complication 5: per-file optimization override ───────────────────────────
# codec_interface.c wraps a timing-sensitive proprietary codec; -Os breaks it.
# Appending -O0 after the target-level -Os works because GCC honours the last
# -O flag on the command line.
set_source_files_properties(
    application/source/dmr_codec/codec_interface.c
    PROPERTIES COMPILE_OPTIONS "-O0"
)

# ─── Complication 6: per-file GITVERSION define ───────────────────────────────
# These three files display the firmware version string in the UI and over USB.
# Source-level COMPILE_DEFINITIONS are additive — the target-level defines
# (USE_HAL_DRIVER, STM32F405xx, etc.) remain in effect alongside this one.
set_source_files_properties(
    application/source/functions/hotspot.c
    application/source/usb/usb_com.c
    application/source/user_interface/menuFirmwareInfoScreen.c
    PROPERTIES COMPILE_DEFINITIONS "GITVERSION=${GIT_HASH}"
)

# ─── Linker options ───────────────────────────────────────────────────────────
# STM32F405VGTX_FLASH.ld sets FLASH origin to 0x800C000 (after the 48 KB
# bootloader) and places the codec binary at absolute address 0x807537C.
# Both constraints must survive the linker step unchanged.
target_link_options(WaveForge.elf PRIVATE
    ${MCU_FLAGS}
    -T${CMAKE_CURRENT_SOURCE_DIR}/STM32F405VGTX_FLASH.ld
    -Wl,-Map=${CMAKE_CURRENT_BINARY_DIR}/WaveForge.map,--cref
    -Wl,--gc-sections
    --specs=nano.specs
    -Wl,--print-memory-usage
)
target_link_libraries(WaveForge.elf PRIVATE m)

# Ensure the linker re-runs if the linker script changes.
set_target_properties(WaveForge.elf PROPERTIES
    LINK_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/STM32F405VGTX_FLASH.ld
)

# ─── Post-build: generate flashable images ────────────────────────────────────
add_custom_command(TARGET WaveForge.elf POST_BUILD
    COMMAND ${CMAKE_OBJCOPY} -O ihex
        $<TARGET_FILE:WaveForge.elf>
        ${CMAKE_CURRENT_BINARY_DIR}/WaveForge.hex
    COMMAND ${CMAKE_OBJCOPY} -O binary
        $<TARGET_FILE:WaveForge.elf>
        ${CMAKE_CURRENT_BINARY_DIR}/WaveForge.bin
    COMMAND ${CMAKE_SIZE} --format=berkeley $<TARGET_FILE:WaveForge.elf>
    # Produce the distribution artifact (WaveForge_<Platform>.bin).
    COMMAND "${CODEC_CLEANER}"
        -i "${CMAKE_CURRENT_BINARY_DIR}/WaveForge.bin"
        -o "${CMAKE_CURRENT_BINARY_DIR}/${OUTPUT_BASE}.bin"
    COMMENT "Packaging ${OUTPUT_BASE}.bin"
)
